dancing font not working default to arial instead of cursive

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: 'Dancing Script' !important;
+  font-family: 'Dancing' !important;
   font-weight: 400 !important;
   font-display: swap !important;
   font-style: normal !important;
@@ -54,7 +54,7 @@ body {
     }
     .author-name {
       //font-family: 'Vujahday Script', cursive;
-      font-family: 'Dancing Script', 'Arial', cursive;
+      font-family: 'Dancing', 'Arial', cursive;
       font-size: 28px;
     }
   }
