events upcoming book

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,6 +109,9 @@ body {
       }
     }
   }
+  a.bn {
+    color: #ab4a28 !important;
+  }
   .btn-outline-primary {
     color: #ab4a28 !important;
     border-color: #ab4a28 !important;
