--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,10 @@ body {
     }
     .footer {
       height: 50px;
+      svg {
+        max-height: 30px;
+        max-width: 30px;
+      }
     }
   .about {
     .description {
