--- a/src/styles.scss
+++ b/src/styles.scss
@@ -92,7 +92,7 @@ body {
     .footer {
       height: 50px;
       svg {
-        max-height: 30px;
+        height: 30px;
         max-width: 30px;
       }
     }
