center footer on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,6 +99,7 @@ body {
     @media (max-width: 767px) {
       .footer {
         display: block !important;
+        text-align: center !important;
       }
     }
   .about {
