--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,9 +22,10 @@ body {
   font-weight: normal;
   background-color: #ebebed !important;
   .navbar {
-    background-color: #ac2521 !important;
+    background-color: #810804 !important;
     background-color: #d76d43 !important;
     background-color: #2f9365 !important;
+    background-color: #910703 !important;
     // background-color: #4491a2 !important;
     //background-color: #934628 !important;
     a {
@@ -32,6 +33,7 @@ body {
       color: #ded4ae !important;
       color: #efe7b3 !important;
     }
+
     .container {
       padding: 0 15px;
       @media  (max: 450px) {
@@ -57,10 +59,12 @@ body {
         background-color: #215910;
         background-color: #2f6a4f;
         background-color: #336b51;
+        background-color: #6e0d02;
         a {
           background-color: #743223;
           background-color: #215910;
           background-color: #2f6a4f;
+          background-color: #6e0d02;
         }
         @media (max-width: 450px) {
           a {
@@ -108,6 +112,9 @@ body {
           color: #606060;
         }
       }
+      .gatsby-image-wrapper {
+        min-width: 245px;
+      }
     }
     main.content-wrapper {
       min-height: calc(80vh - 50px);
@@ -146,16 +153,20 @@ body {
   a.bn {
     color: #ab4a28 !important;
     color: #336b51 !important;
+    color: #910703 !important;
   }
   .btn-outline-primary {
     color: #ab4a28 !important;
     color: #336b51 !important;
+    color: #910703 !important;
     border-color: #ab4a28 !important;
     border-color: #336b51 !important;
+    border-color: #a74f46 !important;
     &:hover {
       color: #fff !important;
       background-color: #ab4a28 !important;
       background-color: #336b51 !important;
+      background-color: #910703 !important;
     }
   }
   .lost-image {
@@ -165,6 +176,8 @@ body {
   .nav-pills .nav-link.active {
     border: 1px solid #ab4a28;
     border: 1px solid #336b51;
+    border: 1px solid #a74f46;
+    border: 1px solid #910703;
   }
   .nav-pills .nav-link.active,
   .nav-pills {
